cnn_cuda/x64/Debug/cnn_cuda.log
  Compiling CUDA source file cuda_tensor.cu...
  
  C:\Users\USER\Study\Y2S3\Parallel and Distributed System\cnn_vs\cnn_cuda>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.44.35207\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include"  -G   --keep-dir cnn_cuda\x64\Debug  -maxrregcount=0    --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdcnn_cuda\x64\Debug\vc143.pdb" -o "C:\Users\USER\Study\Y2S3\Parallel and Distributed System\cnn_vs\cnn_cuda\cnn_cuda\x64\Debug\cuda_tensor.cu.obj" "C:\Users\USER\Study\Y2S3\Parallel and Distributed System\cnn_vs\cnn_cuda\cuda_tensor.cu" 
C:\Users\USER\Study\Y2S3\Parallel and Distributed System\cnn_vs\cnn_cuda\cuda_tensor.cu(112): error : no instance of function template "tiled_mat_mul_kernel" matches the argument list
              argument types are: (const float *, const float *, float *, int, int, int, bool, bool)
        tiled_mat_mul_kernel << <gridDim, blockDim >> > (
        ^
  C:\Users\USER\Study\Y2S3\Parallel and Distributed System\cnn_vs\cnn_cuda\cuda_tensor.cu(6): note #3327-D: candidate function template "tiled_mat_mul_kernel" failed deduction
    __declspec(__global__) void tiled_mat_mul_kernel(T* A, T* B, T* C,
                                ^
            detected during instantiation of "void CudaTensor<T, N>::matmul_device(const CudaTensor<T, 2Ui64> &, const CudaTensor<T, 2Ui64> &, CudaTensor<T, 2Ui64> &, bool, bool) [with T=float, N=2Ui64]" at line 123
  
C:\Users\USER\Study\Y2S3\Parallel and Distributed System\cnn_vs\cnn_cuda\cuda_tensor.cu(112): error : no instance of function template "tiled_mat_mul_kernel" matches the argument list
              argument types are: (const float *, const float *, float *, int, int, int, bool, bool)
        tiled_mat_mul_kernel << <gridDim, blockDim >> > (
        ^
  C:\Users\USER\Study\Y2S3\Parallel and Distributed System\cnn_vs\cnn_cuda\cuda_tensor.cu(6): note #3327-D: candidate function template "tiled_mat_mul_kernel" failed deduction
    __declspec(__global__) void tiled_mat_mul_kernel(T* A, T* B, T* C,
                                ^
            detected during instantiation of "void CudaTensor<T, N>::matmul_device(const CudaTensor<T, 2Ui64> &, const CudaTensor<T, 2Ui64> &, CudaTensor<T, 2Ui64> &, bool, bool) [with T=float, N=3Ui64]" at line 124
  
C:\Users\USER\Study\Y2S3\Parallel and Distributed System\cnn_vs\cnn_cuda\cuda_tensor.cu(112): error : no instance of function template "tiled_mat_mul_kernel" matches the argument list
              argument types are: (const float *, const float *, float *, int, int, int, bool, bool)
        tiled_mat_mul_kernel << <gridDim, blockDim >> > (
        ^
  C:\Users\USER\Study\Y2S3\Parallel and Distributed System\cnn_vs\cnn_cuda\cuda_tensor.cu(6): note #3327-D: candidate function template "tiled_mat_mul_kernel" failed deduction
    __declspec(__global__) void tiled_mat_mul_kernel(T* A, T* B, T* C,
                                ^
            detected during instantiation of "void CudaTensor<T, N>::matmul_device(const CudaTensor<T, 2Ui64> &, const CudaTensor<T, 2Ui64> &, CudaTensor<T, 2Ui64> &, bool, bool) [with T=float, N=4Ui64]" at line 125
  
C:\Users\USER\Study\Y2S3\Parallel and Distributed System\cnn_vs\cnn_cuda\cuda_tensor.cu(112): error : no instance of function template "tiled_mat_mul_kernel" matches the argument list
              argument types are: (const double *, const double *, double *, int, int, int, bool, bool)
        tiled_mat_mul_kernel << <gridDim, blockDim >> > (
        ^
  C:\Users\USER\Study\Y2S3\Parallel and Distributed System\cnn_vs\cnn_cuda\cuda_tensor.cu(6): note #3327-D: candidate function template "tiled_mat_mul_kernel" failed deduction
    __declspec(__global__) void tiled_mat_mul_kernel(T* A, T* B, T* C,
                                ^
            detected during instantiation of "void CudaTensor<T, N>::matmul_device(const CudaTensor<T, 2Ui64> &, const CudaTensor<T, 2Ui64> &, CudaTensor<T, 2Ui64> &, bool, bool) [with T=double, N=2Ui64]" at line 126
  
  4 errors detected in the compilation of "C:/Users/USER/Study/Y2S3/Parallel and Distributed System/cnn_vs/cnn_cuda/cuda_tensor.cu".
CUDACOMPILE : nvcc warning : Support for offline compilation for architectures prior to '<compute/sm/lto>_75' will be removed in a future release (Use -Wno-deprecated-gpu-targets to suppress warning).
  cuda_tensor.cu
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 12.9.targets(801,9): error MSB3721: The command ""C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.44.35207\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include"  -G   --keep-dir cnn_cuda\x64\Debug  -maxrregcount=0    --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdcnn_cuda\x64\Debug\vc143.pdb" -o "C:\Users\USER\Study\Y2S3\Parallel and Distributed System\cnn_vs\cnn_cuda\cnn_cuda\x64\Debug\cuda_tensor.cu.obj" "C:\Users\USER\Study\Y2S3\Parallel and Distributed System\cnn_vs\cnn_cuda\cuda_tensor.cu"" exited with code 2.
